@@ -381,6 +381,40 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|offset
+operator|<
+literal|0
+operator|||
+name|length
+argument_list|<
+literal|0
+operator|||
+name|offset
+operator|+
+name|length
+argument_list|>
+name|this
+operator|.
+name|length
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"slice() "
+operator|+
+name|sliceDescription
+operator|+
+literal|" out of bounds: "
+operator|+
+name|this
+argument_list|)
+throw|;
+block|}
 return|return
 operator|new
 name|SimpleFSIndexInput
