@@ -2886,6 +2886,210 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testSliceOutOfBounds
+specifier|public
+name|void
+name|testSliceOutOfBounds
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|getDirectory
+argument_list|(
+name|createTempDir
+argument_list|(
+literal|"testSliceOutOfBounds"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexOutput
+name|o
+init|=
+name|dir
+operator|.
+name|createOutput
+argument_list|(
+literal|"out"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|int
+name|len
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|2040
+argument_list|)
+operator|+
+literal|8
+decl_stmt|;
+name|byte
+index|[]
+name|b
+init|=
+operator|new
+name|byte
+index|[
+name|len
+index|]
+decl_stmt|;
+name|o
+operator|.
+name|writeBytes
+argument_list|(
+name|b
+argument_list|,
+literal|0
+argument_list|,
+name|len
+argument_list|)
+expr_stmt|;
+name|o
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexInput
+name|i
+init|=
+name|dir
+operator|.
+name|openInput
+argument_list|(
+literal|"out"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|i
+operator|.
+name|slice
+argument_list|(
+literal|"slice1"
+argument_list|,
+literal|0
+argument_list|,
+name|len
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Did not get IllegalArgumentException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{
+comment|// pass
+block|}
+try|try
+block|{
+name|i
+operator|.
+name|slice
+argument_list|(
+literal|"slice2"
+argument_list|,
+operator|-
+literal|1
+argument_list|,
+name|len
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Did not get IllegalArgumentException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{
+comment|// pass
+block|}
+name|IndexInput
+name|slice
+init|=
+name|i
+operator|.
+name|slice
+argument_list|(
+literal|"slice3"
+argument_list|,
+literal|4
+argument_list|,
+name|len
+operator|/
+literal|2
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|slice
+operator|.
+name|slice
+argument_list|(
+literal|"slice3sub"
+argument_list|,
+literal|1
+argument_list|,
+name|len
+operator|/
+literal|2
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Did not get IllegalArgumentException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{
+comment|// pass
+block|}
+name|i
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 comment|// LUCENE-3382 -- make sure we get exception if the directory really does not exist.
 DECL|method|testNoDir
 specifier|public
